feat(company) : mock test, jacoco 도입
1. mock을 활용한 테스트 코드 작성
2. jacoco 도입